[Android DomKey] Fix 7 key mappings to match FF

This CL maps the following keys:

AKEYCODE_SWITCH_CHARSET  (95)   =>  "ModeChange"
AKEYCODE_FORWARD         (125)  =>  "BrowserForward"
AKEYCODE_NUMPAD_ENTER    (160)  =>  "Enter"
AKEYCODE_BOOKMARK        (174)  =>  "BrowserFavorites"
AKEYCODE_LANGUAGE_SWITCH (204)  =>  "GroupNext"
AKEYCODE_MUHENKAN        (213)  =>  "NonConvert"
AKEYCODE_HENKAN          (214)  =>  "Convert"

See bug for more detailed explanations.

TEST=Manual
1. On Android go to https://cdn.rawgit.com/w3c/uievents/gh-pages/tools/key-event-viewer.html
2. Focus input field
3. Run command "adb shell input keyevent 95", etc
4. Verify produced "key"

Alternatively we can add tests in
"web_input_event_builders_android_unittest.cc", but I'm not sure how useful it would be since it's just a static map.

BUG=662372

Review-Url: https://codereview.chromium.org/2481033007
Cr-Commit-Position: refs/heads/master@{#431337}

Former-commit-id: c7c76532cc8698c31c622c3340fd0b33ec0d36e3